--- a/src/app.pcss
+++ b/src/app.pcss
@@ -1,3 +1,4 @@
+@import '@fontsource-variable/inter';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -67,13 +68,11 @@
 
 		--ring: hsl(212.7, 26.8%, 83.9);
 	}
-}
-
-@layer base {
 	* {
 		@apply border-border;
 	}
 	body {
+		font-family: 'Inter Variable', sans-serif;
 		@apply bg-background text-foreground;
 	}
 
