--- a/src/app.pcss
+++ b/src/app.pcss
@@ -76,7 +76,7 @@
 		@apply bg-background text-foreground;
 	}
 
-	.g-container {
+	.container {
 		max-width: 1440px;
 		margin-left: auto;
 		margin-right: auto;
