improve footer UI

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -74,6 +74,7 @@
 	body {
 		font-family: 'Inter Variable', sans-serif;
 		@apply bg-background text-foreground;
+		/* overflow-x: hidden; */
 	}
 
 	.container {
@@ -82,5 +83,10 @@
 		margin-right: auto;
 		padding-left: 1rem;
 		padding-right: 1rem;
+	}
+
+	.icon {
+		width: 24px;
+		height: 24px;
 	}
 }
