--- a/src/app.pcss
+++ b/src/app.pcss
@@ -3,70 +3,53 @@
 @tailwind components;
 @tailwind utilities;
 
+/* base color: #F9E5C9 */
+
 @layer base {
 	:root {
-		--background: 0 0% 100%;
-		--foreground: 222.2 84% 4.9%;
-
-		--muted: 210 40% 96.1%;
-		--muted-foreground: 215.4 16.3% 46.9%;
-
-		--popover: 0 0% 100%;
-		--popover-foreground: 222.2 84% 4.9%;
-
-		--card: 0 0% 100%;
-		--card-foreground: 222.2 84% 4.9%;
-
-		--border: 214.3 31.8% 91.4%;
-		--input: 214.3 31.8% 91.4%;
-
-		--primary: 222.2 47.4% 11.2%;
-		--primary-foreground: 210 40% 98%;
-
-		--secondary: 210 40% 96.1%;
-		--secondary-foreground: 222.2 47.4% 11.2%;
-
-		--accent: 210 40% 96.1%;
-		--accent-foreground: 222.2 47.4% 11.2%;
-
-		--destructive: 0 72.2% 50.6%;
-		--destructive-foreground: 210 40% 98%;
-
-		--ring: 222.2 84% 4.9%;
-
+		--background: 35 62% 100%;
+		--foreground: 35 5% 10%;
+		--card: 35 50% 100%;
+		--card-foreground: 35 5% 15%;
+		--popover: 35 62% 100%;
+		--popover-foreground: 35 95% 10%;
+		--primary: 35 80% 88.2%;
+		--primary-foreground: 0 0% 0%;
+		--secondary: 35 30% 90%;
+		--secondary-foreground: 0 0% 0%;
+		--muted: -3 30% 95%;
+		--muted-foreground: 35 5% 40%;
+		--accent: -3 30% 90%;
+		--accent-foreground: 35 5% 15%;
+		--destructive: 0 62% 50%;
+		--destructive-foreground: 35 5% 100%;
+		--border: 35 30% 82%;
+		--input: 35 30% 50%;
+		--ring: 35 80% 88.2%;
 		--radius: 0.5rem;
 	}
 
 	.dark {
-		--background: 222.2 84% 4.9%;
-
-		--foreground: 210 40% 98%;
-
-		--muted: 217.2 32.6% 17.5%;
-		--muted-foreground: 215 20.2% 65.1%;
-
-		--popover: 222.2 84% 4.9%;
-		--popover-foreground: 210 40% 98%;
-
-		--card: 222.2 84% 4.9%;
-		--card-foreground: 210 40% 98%;
-
-		--border: 217.2 32.6% 17.5%;
-		--input: 217.2 32.6% 17.5%;
-
-		--primary: 210 40% 98%;
-		--primary-foreground: 222.2 47.4% 11.2%;
-
-		--secondary: 217.2 32.6% 17.5%;
-		--secondary-foreground: 210 40% 98%;
-
-		--accent: 217.2 32.6% 17.5%;
-		--accent-foreground: 210 40% 98%;
-
-		--destructive: 0 62.8% 30.6%;
-		--destructive-foreground: 210 40% 98%;
-
-		--ring: hsl(212.7, 26.8%, 83.9);
+		--background: 35 10% 10%;
+		--foreground: 35 0% 90%;
+		--card: 35 0% 10%;
+		--card-foreground: 35 0% 90%;
+		--popover: 35 10% 5%;
+		--popover-foreground: 35 0% 90%;
+		--primary: 35 80% 88.2%;
+		--primary-foreground: 0 0% 0%;
+		--secondary: 35 10% 18%;
+		--secondary-foreground: 0 0% 100%;
+		--muted: -3 10% 18%;
+		--muted-foreground: 35 0% 60%;
+		--accent: -3 10% 18%;
+		--accent-foreground: 35 0% 90%;
+		--destructive: 0 50% 30%;
+		--destructive-foreground: 35 0% 90%;
+		--border: 35 20% 18%;
+		--input: 35 20% 18%;
+		--ring: 35 80% 88.2%;
+		--radius: 0.5rem;
 	}
 
 	* {
@@ -80,11 +63,49 @@
 
 	.icon {
 		color: currentColor;
+		width: 24px;
+		height: 24px;
+		flex-grow: 0;
+		flex-shrink: 0;
 	}
 }
 
 @layer utilities {
 	.focus-ring {
 		@apply outline-none ring-2 ring-ring ring-offset-2 transition;
+	}
+
+	.btn-lg {
+		@apply gap-1 py-7 text-base font-semibold;
+	}
+
+	.glassy {
+		@apply bg-background bg-opacity-80 backdrop-blur-lg;
+	}
+}
+
+body {
+	--sb-track-color: hsl(var(--muted));
+	--sb-thumb-color: hsl(var(--foreground));
+	--sb-size: 14px;
+}
+
+body::-webkit-scrollbar {
+	width: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track {
+	background: var(--sb-track-color);
+	border-radius: var(--radius);
+}
+
+body::-webkit-scrollbar-thumb {
+	background: var(--sb-thumb-color);
+	border-radius: var(--radius);
+}
+
+@supports not selector(::-webkit-scrollbar) {
+	body {
+		scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
 	}
 }
